--- a/app/src/main/res/layout/activity_domace_zivotinje.xml
+++ b/app/src/main/res/layout/activity_domace_zivotinje.xml
@@ -28,15 +28,13 @@
         app:layout_constraintVertical_bias="0.0"
         tools:layout_editor_absoluteX="4dp" />
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:layout_width="140dp"
-        app:shapeAppearanceOverlay="@style/ImageView.Corner"
-        android:layout_height="140dp"
-        app:srcCompat="@drawable/dog"
-        android:id="@+id/dog"
-        android:padding="10dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/naslov"
-        tools:ignore="MissingConstraints" />
+        android:padding="10dp"
+        tools:layout_editor_absoluteX="0dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
