--- a/app/src/main/res/layout/activity_domace_zivotinje.xml
+++ b/app/src/main/res/layout/activity_domace_zivotinje.xml
@@ -32,9 +32,9 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/naslov"
         android:padding="10dp"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/naslov" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
